--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section{
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 20px;
-    box-shadow:2px 2px 10px;
+    box-shadow:2px 2px 20px rgba(0, 0, 0, 0.733);
 }
 
 .container{
@@ -80,4 +80,14 @@ section{
     top: 0;
     right: 0;
     color: #eeeeeea4;
+}
+
+button:hover{
+    transform: scale(0.9);
+}
+
+p{
+    padding: 10px;
+    font-weight: bold;
+    font-style: italic;
 }
